--- a/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
+++ b/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
@@ -3,13 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>5.0.0</Version>
+    <Version>5.0.4</Version>
     <Description>This library is used to access WordPress MySQL database with many helpful functions. Targeting .NET 5</Description>
-    <!--<AssemblyName>CodeCapital.WordPress</AssemblyName>
-    <PackageId>CodeCapital.WordPress</PackageId>-->
-    <!--<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>-->
     <PackageTags>WordPress,aspnetcore</PackageTags>
     <Authors>Vaclav Elias</Authors>
     <Company>Code Capital</Company>
@@ -25,9 +20,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
