--- a/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
+++ b/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>6.0.3</Version>
+        <Version>6.0.9</Version>
         <PackageVersion>$(Version)</PackageVersion>
         <Nullable>enable</Nullable>
-        <Description>This library is used to access WordPress MySQL database with many helpful functions. Targeting .NET 5</Description>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Description>This library is used to access WordPress MySQL database with many helpful functions. Targeting .NET 6</Description>
         <PackageTags>WordPress,aspnetcore</PackageTags>
         <Authors>Vaclav Elias</Authors>
         <Company>Code Capital</Company>
@@ -20,10 +21,10 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.7" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.9" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
     </ItemGroup>
 
     <ItemGroup>
