--- a/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
+++ b/src/CodeCapital.WordPress/CodeCapital.WordPress.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <Version>10.0.0</Version>
         <PackageVersion>$(Version)</PackageVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Description>This library is used to access WordPress MySQL database with many helpful functions. Targeting .NET 6</Description>
+        <Description>This library is used to access WordPress MySQL database with many helpful functions. Targeting .NET 10</Description>
         <PackageTags>WordPress,aspnetcore</PackageTags>
         <Authors>Vaclav Elias</Authors>
         <Company>Code Capital</Company>
